feat: sort by top 3 terps
